# tosu-overlay-qt

./: .clang-format  .clangd  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh  cli.cpp  cli.h  commandline.cpp  ipc.cpp  ipc.h  main.cpp  meson.build  meson_options.txt  overlay.cpp  overlay.h  resources.qrc  systemtray.cpp  systemtray.h  tosuwebview.cpp  tosuwebview.h  version.sh  webview.cpp
.github/: Dockerfile
.github/workflows/: build.yml  docker.yml  release.yml
.zed/: debug.json
distributions/: PKGBUILD
extra/kwin-script/: metadata.json
extra/shell-script/: attach.sh
include/: beveledbutton.h  commandline.h  ipc.h  overlay.h  systemtray.h  version.h.in  webview.h
res/: resources.qrc
res/config/: config.yml
res/scripts/: tosu-overlay-injector.js
schema/: config-v1.schema.json
script/: version
src/: .clangd  CMakeLists.txt  beveledbutton.cpp  commandline.cpp  commandline.h  ipc.cpp  ipc.h  main.cpp  overlay.cpp  overlay.h  systemtray.cpp  systemtray.h  version.h.in  webview.cpp
supports/kwin-script/: Makefile  README.md
supports/shell-script/: attach.sh
supports/tosu-overlay-kwin-script/: .gitignore
supports/tosu-overlay-kwin-script/contents/code/: main.js
